--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <h1>Werken met git versiecontrole</h1>
+    <h2>Commit early, commit often.</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, laboriosam quos facilis illo quia minima,
+        iste exercitationem voluptate quae voluptatibus consectetur hic dolore. Omnis debitis, magni unde est laudantium
+        inventore!</p>
 </body>
 
 </html>
