--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stijlblad.css" />
     <title>Intro git</title>
 </head>
 
@@ -13,6 +14,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, laboriosam quos facilis illo quia minima,
         iste exercitationem voluptate quae voluptatibus consectetur hic dolore. Omnis debitis, magni unde est laudantium
         inventore!</p>
+    <img src="img/biegun-wschodni-ZloDJXzcMGA-unsplash-2.jpg" alt="landschapsfoto" />
 </body>
 
 </html>
